# web3-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/: build.yml  lint.yml
cmake/: FindGMP.cmake  FindSECP256K1.cmake
include/web3/: rpc.h  types.h  utils.h  web3.h
include/web3/anvil/: index.h  rpc.h
include/web3/core/: client.h  connector.h  error.h  iconnector.h  serializer.h
include/web3/eth/: accounts.h  contract.h  index.h  rpc.h
include/web3/rpc/: client.h
include/web3/types/: native.h  request.h  response.h
src/: main.cpp  utils.cpp  web3.cpp
src/anvil/: index.cpp
src/core/: client.cpp  connector.cpp
src/eth/: index.cpp  rpc.cpp
src/rpc/: client.cpp
src/types/: native.cpp
